@@ -1,6 +1,15 @@
 Changes in Version 0.7-6
 
-  o SummarizeVariable function removed.
+  o  Improved performance in the EditData function by removing its reliance on a
+     copy of the data frame that was coerced into character-class components.
+
+  o  The format function is now used when a format conversion specification
+     string is not supplied. Previously defaulted to a general string
+     representation; for example, numeric objects were formatted using the '%f'
+     string.
+
+  o  SummarizeVariable function removed and replaced with the more general
+     summary and str functions.
 
 Changes in Version 0.7-5
 
